RESOLVED FIXED56306
JavaMethod.cpp does not compile with V8
https://bugs.webkit.org/show_bug.cgi?id=56306
Summary JavaMethod.cpp does not compile with V8
Steve Block
Reported 2011-03-14 06:43:36 PDT
Code in bridge/jni is used with both JSC and V8 (on Android). The compile error is because JavaMethod.cpp includes the JSC-specific header ScopeChain.h. This was introduced in http://trac.webkit.org/changeset/79904 (when the file was called JNIBridge.cpp)
Attachments
Patch (1.60 KB, patch)
2011-03-14 08:10 PDT, Steve Block
no flags
Steve Block
Comment 1 2011-03-14 08:10:34 PDT
Oliver Hunt
Comment 2 2011-03-14 08:43:52 PDT
Comment on attachment 85675 [details] Patch r=me
WebKit Commit Bot
Comment 3 2011-03-14 10:39:36 PDT
Comment on attachment 85675 [details] Patch Clearing flags on attachment: 85675 Committed r81036: <http://trac.webkit.org/changeset/81036>
WebKit Commit Bot
Comment 4 2011-03-14 10:39:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.