2011-03-14  Steve Block  <steveblock@google.com>

Reviewed by Oliver Hunt.

        JavaMethod.cpp does not compile with V8
        https://bugs.webkit.org/show_bug.cgi?id=56306

        Moved the ScopeChain.h include to JavaStringJSC.

        No new tests, build fix only.

        * bridge/jni/JavaMethod.cpp:
        * bridge/jni/jsc/JavaStringJSC.h

Canonical link: https://commits.webkit.org/70916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81036 268f45cc-cd09-0410-ab3c-d52691b4dbfc